Ajustement du footer

--- a/templates/footer/index.html.twig
+++ b/templates/footer/index.html.twig
@@ -59,17 +59,17 @@
 								</li>
 							{% endfor %}
 							{# <li>
-																																																																																																																																																																																																																																																																																																																																																								<a ng-reflect-router-link="/page,nos-services-jstore" href="/page/nos-services-jstore">Nos services</a>
-																																																																																																																																																																																																																																																																																																																																																							</li>
-																																																																																																																																																																																																																																																																																																																																																							<li>
-																																																																																																																																																																																																																																																																																																																																																								<a ng-reflect-router-link="/page,contactez-nous-category" href="/page/contactez-nous-category">Contactez-Nous</a>
-																																																																																																																																																																																																																																																																																																																																																							</li>
-																																																																																																																																																																																																																																																																																																																																																							<li>
-																																																																																																																																																																																																																																																																																																																																																								<a ng-reflect-router-link="/page,nos-partenaires-mudey" href="/page/nos-partenaires-mudey">Nos partenaires</a>
-																																																																																																																																																																																																																																																																																																																																																							</li>
-																																																																																																																																																																																																																																																																																																																																																							<li>
-																																																																																																																																																																																																																																																																																																																																																								<a ng-reflect-router-link="/page,mentions-lgales-espero" href="/page/mentions-lgales-espero">Mentions légales</a>
-																																																																																																																																																																																																																																																																																																																																																							</li> #}
+																																																																																																																																																																																																																																																																																																																																																																																																																							<a ng-reflect-router-link="/page,nos-services-jstore" href="/page/nos-services-jstore">Nos services</a>
+																																																																																																																																																																																																																																																																																																																																																																																																																						</li>
+																																																																																																																																																																																																																																																																																																																																																																																																																						<li>
+																																																																																																																																																																																																																																																																																																																																																																																																																							<a ng-reflect-router-link="/page,contactez-nous-category" href="/page/contactez-nous-category">Contactez-Nous</a>
+																																																																																																																																																																																																																																																																																																																																																																																																																						</li>
+																																																																																																																																																																																																																																																																																																																																																																																																																						<li>
+																																																																																																																																																																																																																																																																																																																																																																																																																							<a ng-reflect-router-link="/page,nos-partenaires-mudey" href="/page/nos-partenaires-mudey">Nos partenaires</a>
+																																																																																																																																																																																																																																																																																																																																																																																																																						</li>
+																																																																																																																																																																																																																																																																																																																																																																																																																						<li>
+																																																																																																																																																																																																																																																																																																																																																																																																																							<a ng-reflect-router-link="/page,mentions-lgales-espero" href="/page/mentions-lgales-espero">Mentions légales</a>
+																																																																																																																																																																																																																																																																																																																																																																																																																						</li> #}
 						</ul>
 					</div>
 				</div>
@@ -78,19 +78,16 @@
 						<h6 class="widget_title">Category</h6>
 						<ul class="widget_links">
 							<li>
-								<a href="#">Men</a>
+								<a href="/">New Arrival</a>
 							</li>
 							<li>
-								<a href="#">Woman</a>
+								<a href="/">Best Sellers</a>
 							</li>
 							<li>
-								<a href="#">Kids</a>
+								<a href="/">Featured</a>
 							</li>
 							<li>
-								<a href="#">Best Saller</a>
-							</li>
-							<li>
-								<a href="#">New Arrivals</a>
+								<a href="/">Special Offer</a>
 							</li>
 						</ul>
 					</div>
@@ -102,14 +99,14 @@
 							<li>
 								<a routerlink="account" ng-reflect-router-link="account" href="/account">My Account</a>
 							</li>
+							{# <li>
+																																																									<a routerlink="terms" ng-reflect-router-link="terms" href="/terms">Terms</a>
+																																																								</li> #}
 							<li>
-								<a routerlink="terms" ng-reflect-router-link="terms" href="/terms">Terms</a>
+								<a routerlink="signin" ng-reflect-router-link="signin" href="/login">SignIn</a>
 							</li>
 							<li>
-								<a routerlink="signin" ng-reflect-router-link="signin" href="/signin">SignIn</a>
-							</li>
-							<li>
-								<a routerlink="signup" ng-reflect-router-link="signup" href="/signup">Signup</a>
+								<a routerlink="signup" ng-reflect-router-link="signup" href="/register">Signup</a>
 							</li>
 						</ul>
 					</div>
